# alldata

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.md
.github/workflows/: ci.yml
alembic/: env.py
backend/: config.py  database.py  deps.py  main.py
backend/api/: auth.py  content.py  courses.py  datasets.py  execute.py  forks.py  graph.py  merge_back.py  progress.py  topics.py  users.py
backend/models/: __init__.py  content_block.py  course.py  edge.py  fork.py  merge_back.py  misconception.py  progress.py  topic.py  user.py
backend/schemas/: course.py  execution.py  fork.py  graph.py  merge_back.py  progress.py  topic.py  user.py
backend/services/: content_service.py  course_service.py  execution_service.py  fork_service.py  graph_engine.py  merge_service.py  rate_limit.py
docs/: authoring.md  brand.md  cycles.md  dev-stack.md  features.md  forks.md  identity.md  meta-yaml.md  principles.md  vision.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuthMenu.tsx  ErrorBoundary.tsx  Layout.tsx  Logo.tsx  (+2 more)
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.sandbox  init.sql  nginx.conf
scripts/: dev-check.ps1
seed/: import_seed.py  schema.yaml  watch.py
seed/datasets/: coin-flips-1000.csv  heights.csv  manifest.yaml  medical-test-results.csv  monty-hall-runs.csv
tests/: conftest.py  test_api.py  test_execute_limit.py  test_forks.py  test_graph_engine.py  test_parser.py
(+132 files in other folders)
